--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,6 @@ spring.datasource.man.driver-class-name=com.mysql.jdbc.Driver
 
 #mybatis
 mybatis-plus.mapper-locations=classpath:mapper/*Mapper.xml
+
+#player
+player.host=10.101.107.178
