添加日志文件

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.mode=LEGACYHTML5
 
 #log
+logging.config=classpath:log4j.xml
 logging.level.root=info
 
 
