--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,11 @@ repositories {
     }
 }
 
+configurations {
+    //remove default logger
+    all*.exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+}
+
 dependencies {
     compile "com.baomidou:mybatis-plus-boot-starter:3.1.0"
     compile('mysql:mysql-connector-java')
@@ -38,6 +43,9 @@ dependencies {
 
     compile 'net.sourceforge.nekohtml:nekohtml:1.9.12'
     compile 'org.springframework.boot:spring-boot-starter-thymeleaf:1.5.9.RELEASE'
+
+    //log4j
+    implementation('org.springframework.boot:spring-boot-starter-log4j2')
     
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
