--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.thymeleaf.mode=LEGACYHTML5
 
 #log
 logging.config=classpath:log4j.xml
-logging.level.root=info
+#logging.level.root=info
 
 
 #db
